renaming the component to be ProjectBottomCTA and changing the z-index of it to avoid blocking other UI content when not visible in the page

--- a/src/components/ProjectBottomCTA.module.css
+++ b/src/components/ProjectBottomCTA.module.css
@@ -1,5 +1,5 @@
 /* FullScreenCTA.module.css */
-.fullScreenCTA {
+.bottomCTA {
     position: fixed;
     bottom: 0;
     left: 0;
